Removed Payment_info; set time_interval=0.4; collect \  age, collect mechtuch id, remove name; set round feedback=false

--- a/bret/templates/bret/Instructions.html
+++ b/bret/templates/bret/Instructions.html
@@ -25,6 +25,7 @@
 {% block content %}
 
     <div class="instructions">
+        <h1>CHANELLE TO CHANGE</h1>
         <p>
             {% blocktrans trimmed %}
                 In the following, you will see a {{ num_rows }}x{{ num_cols }}-matrix containing
