--- a/bret/templates/bret/Questions.html
+++ b/bret/templates/bret/Questions.html
@@ -16,7 +16,8 @@
     </p>
 
     {% formfield player.gender label="What is your gender?" %}
-    {% formfield player.name label="What is your name?" %}
+    {% formfield player.age label="What is your age?" %}
+    {% formfield player.amazon_turk_id label="Please enter your Amazon Turk ID" %}
     {% next_button %}
 </div>
 {% endblock %}
