Added participant code to ResultsFinal

--- a/bret/templates/bret/ResultsFinal.html
+++ b/bret/templates/bret/ResultsFinal.html
@@ -75,6 +75,7 @@
 
         <div class="card card-info">
         <p>You will recieve a bonus payment on amazon turk in the next 1-3 days if you won the final competitive round.</p>
+        <h3>Please enter this code into amazon turk to prove completion of experiment: <strong>{{naw}}cad</strong></h3>
         </div>
     {% endif %}    
 
