Spit initial instructions into two and updated copy for Chan.

--- a/bret/templates/bret/Decision.html
+++ b/bret/templates/bret/Decision.html
@@ -59,9 +59,11 @@
 {# *** TITLE *** #}
 {# ****************************************************************************************************************** #}
 {% block title %}
-    {% trans "Your Decision" %}
     {% if subsession.round_number < 2 %}
+        {% trans "Practice Round" %}
         <h4><em>This is Round 1. It is a practice round for you to become familiar with how the game works.</em></h4>
+    {% else %}
+        {% trans "Recoreded Round" %}
     {% endif %}
 {% endblock %}
 
