--- a/bret/templates/bret/Competitive.html
+++ b/bret/templates/bret/Competitive.html
@@ -15,7 +15,7 @@
 {# *** TITLE *** #}
 {# ****************************************************************************************************************** #}
 {% block title %}
-    {% trans "Competition Round" %}
+    {% trans "Second Section Instructions" %}
 {% endblock %}
 
 
@@ -23,20 +23,87 @@
 {# *** CONTENT *** #}
 {# ****************************************************************************************************************** #}
 {% block content %}
+    <div class="instructions">
+        {% if treatment == 't1' %}
+            <p>
+                In this next and ﬁnal section, you will play one more round of the exact same task as before, but you will be competing against another participant from Amazon Turk. 
+            </p>
+            <ul>
+                <li>
+                    The participant with the highest number of points will win.  Winners have an increased probability of being selected to receive the bonus payment. 
+                </li>
+                <li>
+                    If you win, your payoffs from this round will also be eligible to be randomly selected for payment. 
+                </li>
+                <li>
+                    If you lose, only your first round will be eligible to be randomly selected for payment.        
+                </li>
+            </ul>
 
-   {% if treatment == 't1' %}
-    <h1>This will display if Treatment 1 - Place Treatment information here.</h1>
-   {% elif treatment == 't2' %} 
-   <h1>This will display if Treatment 2 - Place Treatment information here.</h1>
-   {% elif treatment == 't3' %} 
-   <h1>This will display if Treatment 3 - Place Treatment information here.</h1>
-   {% elif treatment == 'Control' %}
-   <h1>This will display if Control Group - Place Treatment information here.</h1>
-   {% endif %}
-        <p>
-            For the next round, you will compete with another participant of the opposite gender. Only the person with the highest payoff
-            will receive the corresponding payment.
-        </p>
-        <br/>
+            <h5>
+                You have been matched with someone of the opposite sex from yourself. Your payoﬀ in this round is dependent on their performance. Only the person who gets the highest number of points wins.
+            </h5>
+        {% elif treatment == 't2' %} 
+            <p>
+                In this next and ﬁnal section, you will play one more round of the exact same task as before, but you will be competing against another participant from Amazon Turk. 
+            </p>
+            <ul>
+                <li>
+                    The participant with the highest number of points will win.  Winners have an increased probability of being selected to receive the bonus payment. 
+                </li>
+                <li>
+                    If you win, your payoffs from this round will also be eligible to be randomly selected for payment. 
+                </li>
+                <li>
+                    If you lose, only your first round will be eligible to be randomly selected for payment.        
+                </li>
+            </ul>
+
+            <h5>
+                You have been matched with someone of the same sex as yourself. Your payoﬀ in this round is dependent on their performance. Only the person who gets the highest number of points wins.
+            </h5>
+        {% elif treatment == 't3' %} 
+        
+
+            <p>
+                In this next and ﬁnal section, you will play one more round of the exact same task as before, but you will be competing against another five other participants from Amazon Turk. 
+            </p>
+            <ul>
+                <li>
+                    The participant with the highest number of points will win.  Winners have an increased probability of being selected to receive the bonus payment. 
+                </li>
+                <li>
+                    If you win, your payoffs from this round will also be eligible to be randomly selected for payment. 
+                </li>
+                <li>
+                        If you lose, only your first round will be eligible to be randomly selected for payment.  
+                </li>
+            </ul>
+
+            <h5>
+                You have been matched with your 5 opponents. Your payoﬀ in this round is dependent on the performance of all other opponents. Only the person who gets the highest number of points wins.
+            </h5>
+        {% elif treatment == 'control' %}
+            <p>
+                In this next and ﬁnal section, you will play one more round of the exact same task as before, but you will be competing against another participant from Amazon Turk. 
+            </p>
+            <ul>
+                <li>
+                    The participant with the highest number of points will win.  Winners have an increased probability of being selected to receive the bonus payment. 
+                </li>
+                <li>
+                    If you win, your payoffs from this round will also be eligible to be randomly selected for payment. 
+                </li>
+                <li>
+                    If you lose, only your first round will be eligible to be randomly selected for payment.        
+                </li>
+            </ul>
+
+            <h5>
+                You have been matched with another participant. Your payoﬀ in this round is dependent on their performance. Only the person who gets the highest number of points wins.
+            </h5>
+        {% endif %}
+    </div>
+    <br/>
     {% next_button %}
 {% endblock %}
