--- a/bret/templates/bret/ResultsFinal.html
+++ b/bret/templates/bret/ResultsFinal.html
@@ -25,7 +25,7 @@
 {% block content %}
 
     <p>
-        Thank you for participating. Your payoff will be determined shortly.
+        Thank you for participating. If you are randomly selected, you will be notified regarding your bonus payout.
     </p>
 
 <!-- ----------------------------------------------------------------------------------------------------------- --> 
@@ -49,9 +49,9 @@
                     {% for p in player_in_all_rounds %}
                     <tr>
                         <td>
-                            {% if p.subsession.round_number < 2 %}
+                            {% if p.subsession.round_number == 1 %}
                                 {% trans "Practice" %}
-                            {% elif p.subsession.round_number <= 5  %}
+                            {% elif p.subsession.round_number == 2  %}
                                 {% trans "Individual" %}
                             {% else %}
                                 {% trans "Competitive" %}
@@ -74,8 +74,9 @@
         </div>
 
         <div class="card card-info">
-        <p>You will recieve a bonus payment on amazon turk in the next 1-3 days if you won the final competitive round.</p>
+        <p>Bonus payments will be paid out on Amazon Turk within the next 1-3 days.</p>
         <h3>Please enter this code into amazon turk to prove completion of experiment: <strong>{{naw}}cad</strong></h3>
+        <p> The experiment is now over. You may close this browser tab/window </p>
         </div>
     {% endif %}    
 
