--- a/bret/templates/bret/Decision.html
+++ b/bret/templates/bret/Decision.html
@@ -62,7 +62,7 @@
     {% if subsession.round_number < 2 %}
         {% trans "Practice Round" %}
     {% elif subsession.round_number == 2 %}
-        {% trans "Recoreded Round" %}
+        {% trans "Recorded Round" %}
     {% elif subsession.round_number > 2 %}
         {% trans "Competition Round" %}
     {% endif %}
@@ -76,7 +76,7 @@
     {% if subsession.round_number < 2 %}
         <p>This is the first round. It is a practice round for you to become familiar with how the game works.</p>
     {% elif subsession.round_number == 2 %}
-        <p>This Round is eligible for the potential bonus payment. </p>
+        <p>This round is eligible for the potential bonus payment. </p>
     {% endif %}
     <div class="panel panel-primary">
             <div
