--- a/bret/templates/bret/ResultsFinal.html
+++ b/bret/templates/bret/ResultsFinal.html
@@ -25,7 +25,7 @@
 {% block content %}
 
     <p>
-        Thank you for participating. If you are randomly selected, you will be notified regarding your bonus payout.
+        Thank you for participating. If you are in the 10% of people randomly selected to recieve payment from the first or the second round, you will be notified regarding your bonus payout.
     </p>
 
 <!-- ----------------------------------------------------------------------------------------------------------- --> 
@@ -72,11 +72,10 @@
                 </table>
             </div>
         </div>
-
         <div class="card card-info">
-        <p>Bonus payments will be paid out on Amazon Turk within the next 1-3 days.</p>
-        <h3>Please enter this code into amazon turk to prove completion of experiment: <strong>{{naw}}cad</strong></h3>
-        <p> The experiment is now over. You may close this browser tab/window </p>
+            <p>Bonus payments will be paid out on Amazon Turk within the next 1-3 days.</p>
+            <h3>Please enter this code into amazon turk to prove completion of experiment: <strong>{{naw}}cad</strong></h3>
+            <p> The experiment is now over. You may close this browser tab/window </p>
         </div>
     {% endif %}    
 
